# hairSEM

./: .gitignore  LICENSE-APACHE  README.md  application_manager.py  crop_manager.py  cv_layers.py  dataset_manager.py  events.py  geometrics.py  input_manager.py  line_tracer.py  main.py  mask_analysis.py  ml_model.py  pyproject.toml  renderer.py  settings.py
